# smarthunter

./: .gitignore  LICENSE  MANIFEST.in  README.md  pypi_instructions.md  pyproject.toml  run_smarthunter.py  run_tests.py  simple_test.py  test_decode.py  test_smarthunter.py
.github/workflows/: build.yml
rust/: Cargo.toml
rust/src/: lib.rs
smarthunter/: __init__.py  __main__.py  core.py  html_template.py
smarthunter/decoders/: base_x.py  compression.py  morse_braille.py  numeric.py  rot_caesar.py
smarthunter/patterns/: crypto.py  ids.py  net.py  secrets.py
src/smarthunter/: __init__.py  _base.py  _finder.pyx  _finder_fallback.py  cli.py  core.py  main.py  registry.py  util.py
src/smarthunter/decoders/: base32_rs.py  base64_rs.py  base85_rs.py  basexx.py  braille.py  cleartext.py  decimal.py  hex.py  morse.py  octal.py  url.py  utf16.py
tests/: __init__.py  test_basic.py
