[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smarthunter"
version = "0.1.0"
description = "Smart-Strings Hunter - Advanced binary string extraction and analysis tool"
authors = [
    {name = "EllE", email = "elle961@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Software Development :: Disassemblers",
]
requires-python = ">=3.7"
dependencies = [
    "python-Levenshtein",
    "jinja2",
    "rich",
    "tqdm",
]

[project.urls]
"Homepage" = "https://github.com/ellE961/smarthunter"
"Bug Tracker" = "https://github.com/ellE961/smarthunter/issues"

[project.scripts]
smarthunter = "smarthunter.__main__:main" 