[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "smarthunter"
version         = "0.1.0"
description     = "Ultra-fast flag & string hunter for mixed/Unicode encodings"
authors         = [{ name = "EllE", email = "elle@example.com" }]
license         = { text = "MIT" }
readme          = "README.md"
requires-python = ">=3.9"
dependencies    = ["typer>=0.12", "rich>=13.7"]

[project.urls]
Homepage = "https://github.com/yourname/smarthunter"

[project.scripts]
smarthunter = "smarthunter.main:main"

[tool.setuptools]
package-dir = {"" = "src"}